--- a/buildingInfo.html
+++ b/buildingInfo.html
@@ -28,10 +28,10 @@
                 <div class="row jumbo-top">
                     <div class="col-sm text-center main-jumbo">
                         <img
-                            src="assets/imgs/logo.jpg"
+                            src="assets/imgs/Helix logo3.png"
                             alt="logo"
-                            width="100"
-                            height="100"
+                            width="150"
+                            height="150"
                         />
                         <h1 class="display-4">
                             <span class="caps">E</span>xplore<span
@@ -85,6 +85,211 @@
                     </ul>
                 </div>
             </nav>
+        </div>
+
+        <div class="container section-1">
+            <div class="row">
+                <h4>Big Data Windows</h4>
+            </div>
+            <div class="row big-data">
+                <div class="col-sm-12 col-md-6">
+                    <p>
+                        The dots and lines across the front of the USB is a
+                        self-portrait of Newcastle University. The image, which
+                        provides solar shading, colour and depth to the central
+                        forum space, is based on a data mining exercise. The
+                        lines, dots and circles represent the information
+                        resources in the University’s websites.
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-6 images">
+                    <img
+                        src="./assets/imgs/big-data-windows.jpg"
+                        alt="big-data-windows"
+                        class="big-data-windows-image"
+                    />
+                </div>
+            </div>
+        </div>
+
+        <div class="container section-2">
+            <div class="row">
+                <h4>Punchcard Past</h4>
+            </div>
+            <div class="row punchcard">
+                <div class="col-sm-12 col-md-6">
+                    <p>
+                        Punch cards were first used to control machinery in the
+                        early 19th century, and later carried data and
+                        instructions for calculating machines and digital
+                        computers.
+                    </p>
+                    <p>
+                        The small dotted pattern that runs around the building
+                        represents a punch card carrying the following message:
+                        GALLOWGATE - NORTH ELSWICK COLLIERY SCOTTISH & NEWCASTLE
+                        BREWERY - SCIENCE CENTRAL.
+                    </p>
+                    <p>
+                        The dot patterns were designed to be appreciated
+                        close-up. As an echo of the history of this site and of
+                        early methods of data storage, they reflect the physical
+                        beginnings of the digital revolution.
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-6 images">
+                    <img
+                        src="./assets/imgs/punchcard.jpg"
+                        alt="punchcard-image"
+                    />
+                </div>
+            </div>
+        </div>
+
+        <div class="container section-3">
+            <div class="row">
+                <h4>MindSphere Lab</h4>
+            </div>
+            <div class="row mind-sphere">
+                <div class="col-sm-12 col-md-6">
+                    <p>
+                        MindSphere is the cloud-based, open, collaborative IoT
+                        operating system from Siemens. Newcastle University is
+                        connecting its assets from across the campus into
+                        MindSphere, enabling students and researchers –
+                        alongside Siemens staff and industry partners – to
+                        harness the value of data.
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-6 images"></div>
+            </div>
+        </div>
+
+        <div class="container section-4">
+            <div class="row">
+                <h4>Old computer displays</h4>
+            </div>
+            <div class="row comp-displays">
+                <div class="col-sm-12 col-md-6">
+                    <p>
+                        The display next to reception shows some of our oldest
+                        computers and those we have used throughout our 60 year
+                        history.
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-6 images"></div>
+            </div>
+        </div>
+
+        <div class="container section-5">
+            <div class="row">
+                <h4>Open Lab</h4>
+            </div>
+            <div class="row open-lab">
+                <div class="col-sm-12 col-md-6">
+                    <p>
+                        Open Lab is a world-leading interaction design and
+                        ubiquitous computing research group in the School of
+                        Computing. It focuses on the experience centred design
+                        of digital technology and applied challenges in
+                        ubiquitous computing. One of the top three in the world
+                        for research papers on Human-Computer Interaction, it
+                        includes the Digital Economy Research Centre and EPSRC
+                        Centre for Doctoral Training in Digital Civics.
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-6 images"></div>
+            </div>
+        </div>
+
+        <div class="container section-6">
+            <div class="row">
+                <h4>Lecture Theatre</h4>
+            </div>
+            <div class="row lecture-theatre">
+                <div class="col-sm-12 col-md-6">
+                    <p>
+                        Capacity of 303 students and has the ability for the
+                        lecturer to customise what is shown on each of the
+                        projected screen. This means the lecture can still
+                        display the lecture notes whilst they are demonstrating
+                        a piece of code or practical element of the lecture.
+                    </p>
+                    <p>
+                        There is a power socket at every seat and each seat has
+                        lumbar support.
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-6 images"></div>
+            </div>
+        </div>
+
+        <div class="container section-7">
+            <div class="row">
+                <h4>Flat Floor Teaching</h4>
+            </div>
+            <div class="row floor-teaching">
+                <div class="col-sm-12 col-md-6">
+                    <p>
+                        312 machines, with all the software that students will
+                        need for their degree. The machines run NetSupport
+                        software that allows the lecturer to send and receive
+                        files from the class. The lecturer is also able to share
+                        their screen to the students and give a lecture.
+                    </p>
+                    <p>
+                        The desks allow students to work on their own laptop or
+                        use pen and paper for some of the modules that do not
+                        require a computer.
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-6 images"></div>
+        </div>
+
+        <div class="container section-8">
+            <div class="row">
+                <h4>Roof Terrace</h4>
+            </div>
+            <div class="row roof-terrace">
+                <div class="col-sm-12 col-md-6">
+                    <p>
+                        There are 2 roof terraces in the building on 4th and 5th
+                        Floors with the 4th floor being used by students.
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-6 images"></div>
+        </div>
+
+        <div class="container section-9">
+            <div class="row">
+                <h4>Awards</h4>
+            </div>
+            <div class="row awards">
+                <div class="col-sm-12 col-md-6">
+                    <p>
+                        Lord Mayor’s Design Award for Sustainability.
+                    </p>
+                    <p>
+                        CEEQUAL Award for best practise in sustainable drainage
+                    </p>
+                    <p>
+                        Constructing Excellence in the North East awards for :
+                        <br />
+                        Integration and Collaborative Working, Sustainability,
+                        Digital & Construction, Offisite Project of the Year,
+                        Building Project of the Year
+                        <br />
+                        Collaborative Built Environment Award, Digital Project
+                        of the year—Digital Construction Awards
+                        <br />
+                        Innovation in Teaching and Learning Award—Education
+                        Estates
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-6 images"></div>
+            </div>
         </div>
 
         <script src="./assets/js/app.js"></script>
