--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         <img
                             src="assets/imgs/Helix logo3.png"
                             alt="logo"
-                            width="100"
-                            height="100"
+                            width="150"
+                            height="150"
                         />
                         <h1 class="display-4">
                             <span class="caps">E</span>xplore<span
@@ -105,7 +105,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Building Info</a>
+                            <a class="nav-link" href="buildingInfo.html"
+                                >Building Info</a
+                            >
                         </li>
                     </ul>
                 </div>
